Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- ENCABEZADO Y CONTROLES -->
         <div class="bg-white p-4 rounded-xl shadow-sm flex flex-col md:flex-row justify-between items-center gap-4">
             <h1 class="text-xl font-bold text-gray-800 flex items-center gap-2">
-                📊 Producción
+                📊 Prod. Corte Pzas
             </h1>
             
             <!-- Botones de Filtro -->
