--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             width: 30px; height: 30px; animation: spin 1s linear infinite; margin: 20px auto;
         }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        .scissors-icon { transform: rotate(-45deg); }
     </style>
 </head>
 <body class="p-4 md:p-6">
@@ -31,13 +32,20 @@
             </h1>
             
             <!-- Botones de Filtro -->
-            <div class="flex bg-gray-100 p-1 rounded-lg">
-                <button onclick="cambiarModo('diario')" id="btnDiario" class="px-4 py-2 text-sm font-semibold rounded-md shadow-sm bg-white text-blue-600 transition-all">
-                    Diario (6 Días)
-                </button>
-                <button onclick="cambiarModo('mensual')" id="btnMensual" class="px-4 py-2 text-sm font-semibold rounded-md text-gray-500 hover:text-gray-700 transition-all">
-                    Mensual (6 Meses)
-                </button>
+            <div class="flex items-center gap-3">
+                <div class="flex bg-gray-100 p-1 rounded-lg">
+                    <button onclick="cambiarModo('diario')" id="btnDiario" class="px-4 py-2 text-sm font-semibold rounded-md shadow-sm bg-white text-blue-600 transition-all">
+                        Diario (6 Días)
+                    </button>
+                    <button onclick="cambiarModo('mensual')" id="btnMensual" class="px-4 py-2 text-sm font-semibold rounded-md text-gray-500 hover:text-gray-700 transition-all">
+                        Mensual (6 Meses)
+                    </button>
+                </div>
+                <a href="resumen.html" class="w-10 h-10 flex items-center justify-center rounded-full bg-blue-600 text-white hover:bg-blue-700 shadow-md transition-all" title="Ir a Resumen Semanal">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 512 512" fill="currentColor">
+                        <path d="M256 192l-39.5-39.5c4.9-12.6 7.5-26.2 7.5-40.5C224 50.1 173.9 0 112 0S0 50.1 0 112s50.1 112 112 112c14.3 0 27.9-2.6 40.5-7.5L192 256l-39.5 39.5c-12.6-4.9-26.2-7.5-40.5-7.5C50.1 288 0 338.1 0 400s50.1 112 112 112s112-50.1 112-112c0-14.3-2.6-27.9-7.5-40.5L256 320l144.5 144.5c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 274.7l-22.6-22.6 22.6-22.6L445.8 84.9c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 184l0 8zm-144 48a48 48 0 1 1 0-96 48 48 0 1 1 0 96zm0 208a48 48 0 1 1 0-96 48 48 0 1 1 0 96z"/>
+                    </svg>
+                </a>
             </div>
         </div>
 
