--- a/resumen.html
+++ b/resumen.html
@@ -594,7 +594,7 @@ svg { overflow: visible; width: 100%; height: 100%; }
             <!-- 2. TRE Stats (Máquina 24h) - NUEVA COLUMNA -->
             <div style="flex: 1; display: flex; flex-direction: column; gap: 15px;">
                 <h3 style="color: #38bdf8; border-bottom: 2px solid #38bdf8; padding-bottom: 10px; font-size: 18px; margin: 0;">
-                    <i class="fa-solid fa-industry"></i> TRE (Económica)
+                    <i class="fa-solid fa-industry"></i> TRE (Uso Total) 24h Real
                 </h3>
                 <p style="font-size: 12px; color: #94a3b8; margin: 0;">(Corte Neto / 24 Horas)</p>
 
@@ -696,12 +696,22 @@ svg { overflow: visible; width: 100%; height: 100%; }
                     <span class="label" style="color: #22c55e; font-weight: bold; font-size: 18px;"><i class="fa-solid fa-sun"></i> Turno Día</span>
                     <span class="value" style="font-size: 24px;">71% <small style="font-size: 14px; color: #94a3b8;">Volumen</small></span>
                 </div>
+                
+                <!-- Eficiencia -->
                 <div class="simple-bar-group" style="width: 100%;">
-                    <div class="simple-bar-label"><span>Eficiencia</span></div>
+                    <div class="simple-bar-label"><span>Eficiencia</span> <span style="color: #22c55e; font-weight:bold;">60%</span></div>
                     <div class="simple-bar-bg"><div class="simple-bar-fill" style="width: 60%; background: #22c55e;"></div></div>
                 </div>
+
+                <!-- TRE (Nuevo) -->
                 <div class="simple-bar-group" style="width: 100%;">
-                    <div class="simple-bar-label"><span>Tiempos Muertos</span> <span style="color: #ef4444;">16%</span></div>
+                    <div class="simple-bar-label"><span>TRE (Uso 24h)</span> <span style="color: #38bdf8; font-weight:bold;">11.1%</span></div>
+                    <div class="simple-bar-bg"><div class="simple-bar-fill" style="width: 11.1%; background: #38bdf8;"></div></div>
+                </div>
+
+                <!-- Tiempos Muertos -->
+                <div class="simple-bar-group" style="width: 100%;">
+                    <div class="simple-bar-label"><span>Tiempos Muertos</span> <span style="color: #ef4444; font-weight:bold;">16%</span></div>
                     <div class="simple-bar-bg"><div class="simple-bar-fill" style="width: 16%; background: #ef4444;"></div></div>
                 </div>
             </div>
@@ -712,49 +722,25 @@ svg { overflow: visible; width: 100%; height: 100%; }
                     <span class="label" style="color: #e879f9; font-weight: bold; font-size: 18px;"><i class="fa-solid fa-moon"></i> Turno Noche</span>
                     <span class="value" style="font-size: 24px;">29% <small style="font-size: 14px; color: #94a3b8;">Volumen</small></span>
                 </div>
+
+                <!-- Eficiencia -->
                 <div class="simple-bar-group" style="width: 100%;">
-                    <div class="simple-bar-label"><span>Eficiencia</span></div>
+                    <div class="simple-bar-label"><span>Eficiencia</span> <span style="color: #e879f9; font-weight:bold;">52%</span></div>
                     <div class="simple-bar-bg"><div class="simple-bar-fill" style="width: 52%; background: #e879f9;"></div></div>
                 </div>
+
+                <!-- TRE (Nuevo) -->
                 <div class="simple-bar-group" style="width: 100%;">
-                    <div class="simple-bar-label"><span>Tiempos Muertos</span> <span style="color: #ef4444;">24%</span></div>
+                    <div class="simple-bar-label"><span>TRE (Uso 24h)</span> <span style="color: #38bdf8; font-weight:bold;">4.5%</span></div>
+                    <div class="simple-bar-bg"><div class="simple-bar-fill" style="width: 4.5%; background: #38bdf8;"></div></div>
+                </div>
+
+                <!-- Tiempos Muertos -->
+                <div class="simple-bar-group" style="width: 100%;">
+                    <div class="simple-bar-label"><span>Tiempos Muertos</span> <span style="color: #ef4444; font-weight:bold;">24%</span></div>
                     <div class="simple-bar-bg"><div class="simple-bar-fill" style="width: 24%; background: #ef4444;"></div></div>
                 </div>
             </div>
-        </div>
-
-        <!-- Positioning Time Chart -->
-        <h3 class="section-title" style="font-size: 24px; margin-bottom: 20px;">Tiempo de Posicionamiento por Turno</h3>
-        <div class="graph-container" style="height: 250px;">
-            <svg viewBox="0 0 800 200" preserveAspectRatio="none">
-                <!-- Grid Lines -->
-                <line x1="100" y1="180" x2="100" y2="20" stroke="#334155" stroke-width="1"/>
-                <line x1="100" y1="180" x2="750" y2="180" stroke="#334155" stroke-width="1"/>
-                
-                <!-- Bars -->
-                <!-- Turno Dia (Green) - Value ~22% -->
-                <rect x="150" y="60" width="500" height="40" fill="#334155" rx="4" />
-                <rect x="150" y="60" width="110" height="40" fill="#22c55e" rx="4">
-                    <animate attributeName="width" from="0" to="110" duration="1s" fill="freeze" />
-                </rect>
-                <text x="120" y="85" fill="#fff" font-weight="bold" font-size="16" text-anchor="end">Día</text>
-                <text x="270" y="85" fill="#fff" font-size="16">22%</text>
-
-                <!-- Turno Noche (Fuchsia) - Value ~26% -->
-                <rect x="150" y="120" width="500" height="40" fill="#334155" rx="4" />
-                <rect x="150" y="120" width="130" height="40" fill="#e879f9" rx="4">
-                    <animate attributeName="width" from="0" to="130" duration="1s" fill="freeze" />
-                </rect>
-                <text x="120" y="145" fill="#fff" font-weight="bold" font-size="16" text-anchor="end">Noche</text>
-                <text x="290" y="145" fill="#fff" font-size="16">26%</text>
-
-                <!-- Scale -->
-                <text x="150" y="195" fill="#94a3b8" font-size="12" text-anchor="middle">0%</text>
-                <text x="275" y="195" fill="#94a3b8" font-size="12" text-anchor="middle">25%</text>
-                <text x="400" y="195" fill="#94a3b8" font-size="12" text-anchor="middle">50%</text>
-                <text x="525" y="195" fill="#94a3b8" font-size="12" text-anchor="middle">75%</text>
-                <text x="650" y="195" fill="#94a3b8" font-size="12" text-anchor="middle">100%</text>
-            </svg>
         </div>
 
     </div>
